# gitdiff-tui

./: .gitignore  Cargo.toml  PLAN.md  README.md
src/: app.rs  cli.rs  clipboard.rs  diff.rs  git.rs  main.rs  review.rs  syntax.rs  ui.rs
tests/: end_to_end.rs
