[package]
name = "gitdiff"
version = "0.1.0"
edition = "2024"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tui-textarea = "0.7"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }

[profile.release]
lto = "thin"
strip = true
