[package]
name = "gitdiff-tui"
version = "0.1.0"
edition = "2024"
description = "TUI for reviewing local git changes like a GitHub PR — leave inline comments that get written to REVIEW.md for an agent or another human to act on."
license = "MIT"
repository = "https://github.com/zemse/gitdiff-tui"
homepage = "https://github.com/zemse/gitdiff-tui"
readme = "README.md"
keywords = ["git", "diff", "tui", "review", "ratatui"]
categories = ["command-line-utilities", "development-tools"]
authors = ["Soham Zemse <sohamzemse143@gmail.com>"]
exclude = ["docs/*", "PLAN.md", "target/*"]

[[bin]]
name = "gitdiff"
path = "src/main.rs"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tui-textarea = "0.7"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
syntect = { version = "5", default-features = false, features = ["default-fancy"] }

[profile.release]
lto = "thin"
strip = true
